smarter uploading